--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@types/node": "^22.13.5",
     "@types/react": "19.0.8",
     "typescript": "5.7.3"
   }
